# threejs-materials

./: .gitignore  Changes.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
examples/: README.md  car-paint.usdc  example_usage.py  gpuo-car-paint.mtlx
scripts/: build_db.py  example_usage.py
src/materialx_db/: __init__.py  convert.py  db.py  library.py  usd_reader.py
src/materialx_db/sources/: ambientcg.py  gpuopen.py  physicallybased.py  polyhaven.py
src/materialx_lib/: __init__.py  categories.py  convert.py  library.py
src/materialx_lib/sources/: ambientcg.py  gpuopen.py  physicallybased.py  polyhaven.py
src/threejs_materials/: __init__.py  convert.py  gltf.py  library.py  models.py  usd_reader.py  utils.py
src/threejs_materials.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/threejs_materials/sources/: __init__.py  ambientcg.py  common.py  gpuopen.py  physicallybased.py  polyhaven.py
tests/: conftest.py  test_convert.py  test_fixes.py  test_gltf.py  test_library.py  test_usd.py
