[project]
name = "threejs-materials"
version = "0.2.0"
description = "Download PBR materials on demand and convert to Three.js MeshPhysicalMaterial JSON"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "materialx>=1.39.4",
    "requests>=2.31.0",
    "openexr>=3.3",
    "pillow>=10.0",
]

[project.optional-dependencies]
usd = ["usd-core>=24.11"]
test = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
