[project]
name = "threejs-materials"
version = "0.5.0"
# version also managed by [tool.bumpversion] below
description = "Download PBR materials on demand and convert to Three.js MeshPhysicalMaterial JSON"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "materialx>=1.39.4",
    "requests>=2.31.0",
    "openexr>=3.3",
    "pillow>=10.0",
    "pygltflib>=1.16",
]

[project.optional-dependencies]
dev = ["bump-my-version", "twine", "build"]
test = ["pytest"]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# bump-my-version settings

[tool.bumpversion]
current_version = "0.5.0"
commit = false
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
allow_dirty = true
message = "Bump version: {current_version} → {new_version}"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.pytest.ini_options]
testpaths = ["tests"]
