[project]
name = "threejs-materials"
version = "1.0.0"
# version also managed by [tool.bumpversion] below
description = "Download PBR materials on demand and convert to Three.js MeshPhysicalMaterial JSON"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
dependencies = ["pillow>=10.0", "pygltflib>=1.16", "requests>=2.31.0"]

[project.optional-dependencies]
materialx = ["materialx>=1.39.4", "openexr>=3.3"]
dev = ["bump-my-version", "twine", "build", "pytest", "mypy", "types-requests"]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# bump-my-version settings

[tool.bumpversion]
current_version = "1.0.0"
commit = false
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
allow_dirty = true
message = "Bump version: {current_version} → {new_version}"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.mypy]
ignore_missing_imports = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["MaterialX.*", "pygltflib.*", "OpenEXR", "Imath"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
